--- a/Maths.ipynb
+++ b/Maths.ipynb
@@ -514,9 +514,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "0ab137ee",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01aea84",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -626,27 +628,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25c41c3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.comb(10, 4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "021d5938",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def combination(n, r):\n",
+    "    num = math.factorial(n)\n",
+    "    den = math.factorial(r) * math.factorial(n-r)\n",
+    "    return num / den"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "27673210",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combination(10, 4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -669,27 +703,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9f22aac0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5040"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.perm(10, 4)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "adc6eef3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def permutation(n, r):\n",
+    "    return math.factorial(n) / math.factorial(n-r)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4735fde6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5040.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "permutation(10, 4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -764,18 +827,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78814885",
+   "id": "d711c45b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d76d527c",
+   "execution_count": 18,
+   "id": "78814885",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def decimalToBinary(n):\n",
+    "    l = []\n",
+    "    while n > 0:\n",
+    "        remainder = n % 2\n",
+    "        l.append(str(remainder))\n",
+    "        n = n // 2\n",
+    "    \n",
+    "#     Reverse the list\n",
+    "    l = list(reversed(l))\n",
+    "    return \"\".join(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d76d527c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10100'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decimalToBinary(20)"
+   ]
   },
   {
    "cell_type": "code",
@@ -786,17 +881,19 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54c9aa7d",
+   "cell_type": "markdown",
+   "id": "f93d4ed2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Break till 10.20 pm"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "id": "83ac6fb3",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f6f7256",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -823,19 +920,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7d6442e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# s is a binary string\n",
+    "def binaryToDecimal(s):\n",
+    "    i = 0\n",
+    "    result = 0\n",
+    "    \n",
+    "    for digit in s[::-1]:\n",
+    "        result += int(digit) * (2**i)\n",
+    "        i = i + 1\n",
+    "        \n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "1badbd20",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binaryToDecimal(\"10100\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -884,13 +1005,118 @@
    "source": [
     "## Problem - Trailing zeros in factorial\n",
     "\n",
-    "Problem Link - [Trailing Zeros In Factorial](https://www.interviewbit.com/problems/trailing-zeros-in-factorial/)"
+    "Problem Link - [Trailing Zeros In Factorial](https://www.interviewbit.com/problems/trailing-zeros-in-factorial/)\n",
+    "\n",
+    "Youtube Video - [Trailing Zeros In Factorial](https://www.youtube.com/watch?v=wkvVdggCSeo&t=687s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e741ecda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265252859812191058636308480000000"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.factorial(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "596f5464",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.210340371976184"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(10**4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e741ecda",
+   "id": "b82be6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "\t# @param A : integer\n",
+    "\t# @return an integer\n",
+    "\tdef trailingZeroes(self, A):\n",
+    "        result = 0\n",
+    "        den = 5\n",
+    "\n",
+    "        x = A // den\n",
+    "\n",
+    "        while x >= 1:\n",
+    "            result += x\n",
+    "            den *= 5\n",
+    "            x = A // den\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829e90c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you are provided t number of testcases.\n",
+    "# for each testcase, take a number as input\n",
+    "\n",
+    "\n",
+    "\n",
+    "t = int(input())\n",
+    "\n",
+    "for i in range(t):\n",
+    "    n = int(input())\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90a47fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d27cd84a",
+   "metadata": {},
+   "source": [
+    "## Magic Number Hint\n",
+    "![](https://scaler-production-new.s3.ap-southeast-1.amazonaws.com/attachments/attachments/000/004/615/original/Magic_Number_Hint.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIDNNIRGHAQUQRWYA%2F20220129%2Fap-southeast-1%2Fs3%2Faws4_request&X-Amz-Date=20220129T175601Z&X-Amz-Expires=3600&X-Amz-SignedHeaders=host&X-Amz-Signature=b22c33d078f9f6346c88c06dc9a4ea5065f2568bf427e746a5e310f25fba9665)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ee9d06",
    "metadata": {},
    "outputs": [],
    "source": []
